--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>welcome to my world</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Peter Parker</span> World</h1>
+            <h3>Building climber and train stopper</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore autem molestiae sunt cupiditate, maiores
+                amet ab alias quis, perferendis ad ipsa nemo at pariatur vero laudantium, sequi tenetur! Qui eveniet
+                reprehenderit dolor suscipit eligendi natus id, veniam repellat officia molestiae.</p>
+            <a class="link-button" href="https://www.programminghero.com" target="_blank">Hire me</a>
+        </div>
+
+
+        <div class="half-width">
+            <img src="/images/images/jhankar.png" alt="">
+        </div>
+
+
+    </section>
+
 </body>
+
 </html>
