third commit, dream section added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,25 @@
             <img src="/images/images/jhankar.png" alt="">
         </div>
 
-
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./images/images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2> Become a web developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio porro quod nobis sunt soluta, ullam optio.
+                Minus, quos. Optio, vero officia, quas sunt sed nam est facilis delectus possimus adipisci magni commodi
+                aspernatur? Consequuntur aliquid magni eos consequatur sequi reprehenderit.</p>
+
+
+            <a class="link-button" href="https://www.programminghero.com" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+        </div>
+    </section>
+
 
 </body>
 
