--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Peter Parker</span> World</h1>
@@ -31,7 +31,7 @@
 
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="./images/images/jhankar2.png" alt="">
         </div>
@@ -47,6 +47,33 @@
         </div>
         </div>
     </section>
+
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h1>Full Stack Developer</h1>
+                <h3 class="orange-color">2022-present | Pro level developer</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et perferendis dolores voluptate. Autem
+                    molestiae incidunt quo provident quas. Tempore, reiciendis.</p>
+            </div>
+
+
+            <div id="web-dev-experience" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">2022-2024 | Hero learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, ex perferendis assumenda dolorum
+                    earum ducimus officia molestias quo excepturi quibusdam.</p>
+            </div>
+
+
+        </div>
+    </section>
+
+    <footer>
+        <p>@ Peter Parker 2022, a programming hero initiative</p>
+    </footer>
 
 
 </body>
